# Octane

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  tracing.rs
src/core/: effect.rs  logs.rs  mod.rs  model.rs  msg.rs
src/core/primitives/: async_state.rs  mod.rs
src/services/: mod.rs
src/services/adb/: error.rs  handle.rs  mod.rs  utils.rs
src/services/session/: handle.rs  mod.rs
src/services/session_manager/: error.rs  handle.rs  mod.rs
src/services/stream_decoder/: mod.rs  video.rs
src/services/utils/: sender.rs
src/shell/: app.rs  capabilities.rs  mod.rs  pollers.rs
src/transcoding/: error.rs  mod.rs
src/transcoding/hw/: device.rs  device_index.rs  device_pool.rs  device_type.rs  mod.rs
src/transcoding/video/: decoder.rs  frame_buffer.rs  mod.rs
src/ui/: context.rs  mod.rs
src/ui/components/: mod.rs  style.rs
src/ui/components/features/: device_list.rs  log_view.rs  mod.rs
src/ui/pages/: home.rs  mod.rs
src/ui/pages/settings/: components.rs  mod.rs  state.rs
src/ui/perf/: fps_counter.rs
src/ui/renderer/: mod.rs  offscreen_texture.rs  video_player.rs
src/ui/renderer/frame/convert/: mod.rs  utils.rs
src/ui/renderer/frame/convert/nv12/: mod.rs  rgba.wgsl  textures.rs  vertex.rs
src/ui/renderer/frame/convert/yuv420p/: mod.rs  rgba.wgsl  textures.rs  vertex.rs
src/ui/views/: mod.rs
src/ui/views/session/: mod.rs  state.rs
src/utils/: fs.rs  math.rs  mod.rs
